...
                    TextElement(
                      id: DateTime.now().millisecondsSinceEpoch.toString(),
                      x: (canvasSize.width - elementWidth) / 2,
                      y: (canvasSize.height - elementHeight) / 2,
                      width: elementWidth,
                      height: elementHeight,
                      text: 'Hello',
                      fontSize: 24,
                      color: Colors.black,
                    ),
                  );
            },
          ),
...
